Se añade el css a los archivos, se veian feos

--- a/Ejercicio 5/ejercicio5.html
+++ b/Ejercicio 5/ejercicio5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 5</title>
-    <style rel="stylesheet" type="text/css" href="ejercicio5.css"></style>
+    <link rel="stylesheet" type="text/css" href="ejercicio5.css"></link>
 </head>
 <body>
     <!-- Una empresa constructora vende terrenos con la forma A de la figura. 
