--- a/Ejercicio 6/ejercicio6.html
+++ b/Ejercicio 6/ejercicio6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 6</title>
-    <style rel="stylesheet" type="text/css" href="ejercicio5.css"></style>
+    <link rel="stylesheet" type="text/css" href="ejercicio6.css"></link>
 </head>
 <body>
 
